Fixed issue 03812 : Layout issue at Up & Down Arrows Dev Added styles for disabled up/down buttons
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@7805 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/phpsurveyor/adminstyle.css
+++ b/admin/styles/phpsurveyor/adminstyle.css
@@ -92,6 +92,21 @@ td {
 	color: #999;
 	font-size: 11px;
 }
+
+.disabledUpDnBtn {
+	color: #999;
+	font-size: 11px;
+	border: none !important;
+	filter: alpha(opacity:0.5);
+	KHTMLOpacity: 0.5;
+	MozOpacity: 0.5;
+	-khtml-opacity:.50;
+	-ms-filter:"alpha(opacity=50)";
+	-moz-opacity:.50;
+	filter:alpha(opacity=50);
+	opacity:.50;
+}
+
 input, select {
 	color: #000080;
 	background: #EEEFFF;
